# 2025.1-Jera

./: .env.dev  .gitignore  404.html  Dockerfile  app_teste.py  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml
Back_end/: .env  BACKEND.md
backend/: BACKEND.md  Dockerfile  pyproject.toml  ruff.toml
backend/app/: __init__.py  insomnia_export.json  main.py
backend/app/config/: __init__.py  logging.py  settings.py
backend/app/db/: __init__.py  manager.py
backend/app/db/models/: __init__.py  alerta.py  estado_estetico.py  lote.py  movimentacaoEstoque.py  movimentacao_estoque.py  product.py  product_type.py  tipo_alerta.py
backend/app/graphql/: product.py  user.py
backend/app/repositories/: alerta.py  movimentacaoEstoque.py  movimentacao_estoque.py  product.py  product_type.py  tipo_alerta.py
backend/app/routers/: alerta.py  graphql.py  movimentacaoEstoque.py  movimentacao_estoque.py  product.py  product_type.py  tipo_alerta.py
backend/app/routers/schemas/: alerta.py  movimentacaoEstoque.py  movimentacao_estoque.py  product.py  product_type.py  tipo_alerta.py
backend/app/services/: alerta.py  movimentacaoEstoque.py  movimentacao_estoque.py  product.py  product_type.py  tipo_alerta.py
backend/app/utils/: logger.py  session_inject.py  singleton.py
backend/tests/: test_movimentacaoEstoqueRepository.py  test_movimentacao_estoque.py
docs/visao/: index.md  (+7 more)
frontend/: App.tsx  babel.config.js  package-lock.json  package.json
search/: search_index.json
visao/: index.html
(+57 files in other folders)
